build with ndk 18

--- a/CMake06_Android_NDK_LLVM_toolchain/src/CMakeLists.txt
+++ b/CMake06_Android_NDK_LLVM_toolchain/src/CMakeLists.txt
@@ -5,7 +5,7 @@ PROJECT(Solution)
 #project
 SET ( project_name test_project )
 #CMake include
-include("android_ndk_llvm.cmake")
+#include("android_ndk_llvm.cmake")
 
 INCLUDE_DIRECTORIES(
 ../include
