--- a/CMake08_Android_NDK_Windows_build_APK/src/qtdeploy.json.in
+++ b/CMake08_Android_NDK_Windows_build_APK/src/qtdeploy.json.in
@@ -14,5 +14,6 @@
  "useLLVM": @QT_ANDROID_USE_LLVM@,
  "application-binary": "@QT_ANDROID_APPLICATION_BINARY@",
  "android-package": "@QT_ANDROID_APP_PACKAGE_NAME@",
- "android-app-name": "@QT_ANDROID_APP_NAME@"
+ "android-app-name": "@QT_ANDROID_APP_NAME@",
+ "android-package-source-directory": "@QT_ANDROID_APP_PACKAGE_SOURCE_ROOT@"
 }
