--- a/CMake08_Android_NDK_Windows_build_APK/android/in/qtdeploy.json.in
+++ b/CMake08_Android_NDK_Windows_build_APK/android/in/qtdeploy.json.in
@@ -15,5 +15,6 @@
  "application-binary": "@QT_ANDROID_APPLICATION_BINARY@",
  "android-package": "@QT_ANDROID_APP_PACKAGE_NAME@",
  "android-app-name": "@QT_ANDROID_APP_NAME@",
+ @QT_ANDROID_APP_EXTRA_LIBS@
  "android-package-source-directory": "@QT_ANDROID_APP_PACKAGE_SOURCE_ROOT@"
 }
