adjust to add_component

--- a/CMake12_cmake_parse_arguments/CMakeLists.txt
+++ b/CMake12_cmake_parse_arguments/CMakeLists.txt
@@ -4,21 +4,27 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
 #Solutin
 PROJECT(Solution)
 
-function(MY_PARSE)
+function(add_component NAME)
 
-    set(options ADULT)
-    set(oneValueArgs NAME AGE)
-    set(multiValueArgs "SCORE;OTHER")
+    set(options "")
+    set(oneValueArgs PACKAGE)
+    set(multiValueArgs "SOURCES;INCLUDES")
 
-    cmake_parse_arguments(STUDENT "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN} )
+    cmake_parse_arguments(COMP "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN} )
 
     # 通过 prefix_参数名: 例如 STUDENT_ADULT
-    message("isadult  = ${STUDENT_ADULT}")
-    message("name  = ${STUDENT_NAME}")
-    message("age  = ${STUDENT_AGE}")
-    message("score  = ${STUDENT_SCORE}")
-    message("other  = ${STUDENT_OTHER}")
+    message("package  = ${COMP_PACKAGE}")
+    message("sources  = ${COMP_SOURCES}")
+    message("includes  = ${COMP_INCLUDES}")
 
 endfunction()
 
-MY_PARSE(ADULT NAME zhangsan AGE 20 SCORE 100 200 300 400 500 OTHER 1 2 3)
+add_component(TDI "" PACKAGE SPHINX 
+    SOURCES 
+      100 
+      200 
+      300
+    INCLUDES 
+      1 
+      2 
+      3)
